--- a/style.css
+++ b/style.css
@@ -5,40 +5,41 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.header__img {
   width: 100%;
 }
 
-.aaa .more_inf {
+.header__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa {
+  .header {
     text-align: center;
   }
 }
 
-.centered-main-page-element {
+.main-page {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
 
-.task {
+.item__task,
+.item__input {
   width: 56%;
   display: inline-block;
   flex-grow: 1
 }
 
-.task-row-wrapper {
+.new-task__box {
   display: flex;
 }
 
@@ -47,7 +48,7 @@ ul {
   padding: 0px;
 }
 
-li, h3 {
+li {
   list-style:none;
 }
 
@@ -55,7 +56,8 @@ input,button{
   outline:none;
 }
 
-button {
+
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -69,9 +71,15 @@ button:hover {
   color: #3a3a3a;
 }
 
-/* Heading */
-h3,
-label[for="new-task"] {
+.btn-delete {
+  background: none;
+  border: 0px;
+  width: 60px;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -81,7 +89,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.input-text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -94,22 +102,24 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.input-text:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.new-task__title {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+.new-task__input {
   width: 318px;
+  display: inline-block;
+    flex-grow: 1;
 }
 
 /* Task list */
-li {
+.item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -118,51 +128,47 @@ li {
   align-items: center;
 }
 
-li > * {
-  vertical-align: middle;
-}
-
-li > input[type="checkbox"] {
+.item__checkbox {
   margin: 0 10px;
 }
 
-li > label {
+.item__task {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
    width: 226px;
 }
 
-li > input[type="text"] {
+.item__input {
   width: 226px
 }
 
-button.delete img {
+.btn-delete__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.btn-delete__img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.completed-tasks__box label {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.item__input {
   display:none
 }
 
-ul li.editMode input[type=text] {
+.item_edit-mode .item__input {
   display:inline-block;
   width:224px
 }
 
-ul li.editMode label {
+.item_edit-mode .item__task {
   display:none;
 }
