--- a/style.css
+++ b/style.css
@@ -21,9 +21,11 @@ body {
 }
 
 @media (max-width:768px) {
+  
   .header {
     text-align: center;
   }
+  
 }
 
 .main-page {
@@ -32,8 +34,7 @@ body {
   margin: 0 auto 0;
 }
 
-.item__task,
-.item__input {
+.item__input-text {
   width: 56%;
   display: inline-block;
   flex-grow: 1
@@ -56,7 +57,6 @@ input,button{
   outline:none;
 }
 
-
 .btn {
   background: none;
   border: 0px;
@@ -67,7 +67,7 @@ input,button{
   cursor: pointer;
 }
 
-button:hover {
+.btn:hover {
   color: #3a3a3a;
 }
 
@@ -136,10 +136,12 @@ button:hover {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
-   width: 226px;
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1;
 }
 
-.item__input {
+.item__input-text {
   width: 226px
 }
 
@@ -160,11 +162,11 @@ button:hover {
 }
 
 /* Edit Task */
-.item__input {
+.item__input-text {
   display:none
 }
 
-.item_edit-mode .item__input {
+.item_edit-mode .item__input-text {
   display:inline-block;
   width:224px
 }
