--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 .item__input-text {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .new-task__box {
@@ -142,7 +142,7 @@ input,button{
 }
 
 .item__input-text {
-  width: 226px
+  width: 226px;
 }
 
 .btn-delete__img {
@@ -157,18 +157,18 @@ input,button{
 
 /* Completed */
 .completed-tasks__box label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .item__input-text {
-  display: none
+  display: none;
 }
 
 .item_edit-mode .item__input-text {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .item_edit-mode .item__task {
